# ASR-TTS-Data-Collection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.sh  compose.yaml  db.sh  logs  project.config  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: action1.yml  package_app.yml
backend/: .env.backup  .env.backup2  .gitignore  config.py  env.example  main.py  main_original.py  migrate_sqlite_to_mysql.py  migrate_to_prompts_table.py  requirements.txt  setup_database.py  start_mysql.py  test_sqlite_migration.py
backend/api/: __init__.py  exports.py  projects.py  recordings.py  settings.py
backend/database/: __init__.py  connection.py  migration.py  session.py
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  export_service.py  project_service.py  recording_service.py  settings_service.py
backend/static/: index.html
backend/utils/: __init__.py  file_utils.py  logging.py
db_mount/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
db_mount/#innodb_redo/: #ib_redo9
db_mount/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
db_mount/mysql/: general_log_223.sdi  slow_log_224.sdi
db_mount/sys/: sys_config.ibd
frontend/: package.json
release/: setup.iss
(+122 files in other folders)
