[project]
name = "voice-dataset-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.34.0",
    "cryptography==41.0.7",
    "datasets==2.15.0",
    "fastapi==0.104.1",
    "huggingface-hub==0.19.4",
    "pandas>=2.2.0",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]

[project.scripts]
voice-dataset-collection = "voice_dataset_collection:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
